# uv-template

./: .gitignore  Makefile  pyproject.toml  todo.txt
.github/workflows/: .python-package.yaml.swp  python-package.yaml
etc/: jupyter_lab_config.py  set_project_name.py
etc/ipython/: history.sqlite
etc/notebooks/: sandbox.ipynb
help/: publish.md  usage.md
src/xyz/: cli.py
